<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="48dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/details_title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/tour_image"
            android:layout_margin="10dp"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:src="@drawable/tour_default_image"
            android:contentDescription="@string/tour_image" />
            
        <Button
            android:id="@+id/btn_map_with_tour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/show_tour_in_map" />

        <TextView
            android:id="@+id/details_text_view"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
        
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="2" >
        
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_column="0"            
                android:layout_row="0"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/author"
                android:textSize="18sp"
                android:textStyle="bold" />
            
            <TextView
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_column="0"            
                android:layout_row="1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/source"
                android:textSize="18sp"
                android:textStyle="bold" />
            
            <TextView
                android:id="@+id/author_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_column="1"            
                android:layout_row="0"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp" />
            
            <TextView
                android:id="@+id/source_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_column="1"            
                android:layout_row="1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp" />
      
        </GridLayout>

    </LinearLayout>
        
</ScrollView>
